实现了能够打开所有已安装的app 优化了service的代码， 实现了通过设置页面更改语音合成的Speaker/speed/volume/pitch

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,16 +1,54 @@
 <resources>
     <!-- WP Preference -->
-    <string-array name="reply_entries">
+    <string-array name="speaker_entries">
         <item>普通女声(默认)</item>
         <item>普通男声</item>
         <item>情感男声(度逍遥)</item>
         <item>情感女声(度丫丫)</item>
     </string-array>
 
-    <string-array name="reply_values">
+    <string-array name="speaker_values">
         <item>0</item>
         <item>1</item>
         <item>3</item>
         <item>4</item>
     </string-array>
+
+    <string-array name="volume_entries">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7(默认)</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+    </string-array>
+
+    <string-array name="volume_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+    </string-array>
+
+
 </resources>
