--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical"
     android:id="@+id/container">
 
-    <com.liepy.mrl.util.StatusBarHeightView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:use_type="use_padding_top"
-        android:orientation="vertical"
-        android:layout_alignParentRight="true">
+<!--    <com.liepy.mrl.TitleBar2.StatusBarHeightView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:use_type="use_padding_top"-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_alignParentRight="true">-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,7 +74,7 @@
 
             </LinearLayout>
         </LinearLayout>
-    </com.liepy.mrl.util.StatusBarHeightView>
+<!--    </com.liepy.mrl.TitleBar2.StatusBarHeightView>-->
 
 
 </LinearLayout>
